[gd_scene load_steps=4 format=3 uid="uid://bfjpwgtqrbami"]

[ext_resource type="Script" uid="uid://di60bw2bwsbtw" path="res://buildings/house.gd" id="1_j2dgx"]
[ext_resource type="Texture2D" uid="uid://nc61unppthoy" path="res://assets/house.png" id="2_pv5vd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_htohi"]
size = Vector2(57, 18)

[node name="House" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_j2dgx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -9)
shape = SubResource("RectangleShape2D_htohi")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -41)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_pv5vd")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_shape_entered" from="." to="." method="_on_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="." to="." method="_on_mouse_shape_exited"]
